--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     volumes:
       - ./PartajatCuAgentul:/managed_folder:ro
       - ./logs:/app/logs
+    environment:
+      - MCP_API_KEY=cheia_mea_secreta_super_sigura
 
   agent:
     build:
@@ -33,5 +35,6 @@ services:
     environment:
       - ADK_MODEL_PROVIDER=litellm
       - LITELLM_MODEL_NAME=ollama_chat/qwen3:14b
-      - OLLAMA_HOST=http://ollama:11434      # <--- ADD THIS
+      - OLLAMA_HOST=http://ollama:11434    
       - OLLAMA_API_BASE=http://ollama:11434
+      - MCP_API_KEY=cheia_mea_secreta_super_sigura
